made changes in code quality